fix: add CSS to wrap long URLs (#508)

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ code {
   white-space: nowrap;
   width: 1px;
 }
+
+.wrap-url {
+  word-break: break-word;
+}
